tables and figures in text

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % Modified for use with JCC - Madhusudan Singh Copyright (C) (2012). All rights reserved.
-\documentclass[12pt]{revtex4-1}
+\documentclass[12pt]{revtex4}
 
 \setlength{\oddsidemargin}{0in}  %left margin position, reference is one inch
 \setlength{\textwidth}{6.5in}    %width of text=8.5-1in-1in for margin
@@ -294,6 +294,23 @@ we take CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
 It is the smallest system containing one and only one sp$^2$ hybridised carbon atom.
 This choice allows us to isolate the different electrostatic interactions
 to build a physically meaningful model.
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 1
+\begin{center}
+%\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
+\includegraphics[width=8cm]{ch3.png}
+\includegraphics[width=8cm]{pseudoch3.png}
+\includegraphics[width=8cm]{tm_sp2_potentials.png}
+%\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
+%\label{figure:ref_pseudo_diagram}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
+\label{figure:ref_pseudo_diagram}
+\end{figure}
+
 Figure \ref{figure:ref_pseudo_diagram} displays the final pseudo-system: The CH\(^{\bullet}_{3}\) radical has been replaced by
 a hydrogen-like "pseudo-carbon", with a nuclear charge of \(Z_{nucleus} = 1\), and one electron occupying the \(p_{z}\) orbital. 
 There are now no H atoms, and the system is surrounded by three potential sets at a planar distance of \(d\), each consisting of 
@@ -419,14 +436,103 @@ Optimal pseudo potential &  & -3.533 & -9.806 & -10.062 \\
 
 \subsection{C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
 
+\begin{table}[ht]
+\begin{tabular}{c c c c c}
+\hline
+\(s\) coefficient & \(s\) exponent & $\Delta_{ST}$  & Ionisation  & $\varepsilon_{HOMO}$  \\
+\hline
+\multicolumn{2}{c}{\textit{Reference Values}} & -3.533 & -9.091 & -10.363 \\
+\hline
+&& \multicolumn{3}{l}{\(p\) coefficient -3.267; \(p\) exponent 0.295} \\
+\hline
+0.552 & 0.1 & -3.533 & -27.158 & -27.31 \\
+0.608 & 1.0 & -3.533 & -28.247 & -28.395 \\
+0.936 & 5.0 & -3.533 & -29.583 & -29.722 \\
+\hline
+\multicolumn{2}{c}{\textit{Optimal Values}} &\multicolumn{3}{l}{\(p\) coefficient -3.91; \(p\) exponent 0.624} \\
+\hline
+1.5 & 0.5 & -3.533 & -9.806 & -10.062 \\
+\hline
+\end{tabular}
+\caption{\(s\)-potential fits to ethene properties as defined in the text (eV). All values are from HF calculations, and \(d = 0.5\) a.u.}
+\label{table:ethene_excitations}
+\end{table}
+
 Taking these optimal parameters we test them against a series of chain alkenes up to length C\(_{12}\)H\(_{14}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, 
 before taking the reference geometry and applying the pseudo-potentials from Table \ref{table:ethene_excitations}. 
-Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
+Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results.
+Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 3
+\begin{center}
+\includegraphics[width=8cm]{short_pbe0_homo}
+\includegraphics[width=8cm]{short_pbe0_ie}
+\includegraphics[width=8cm]{short_pbe0_st}
+%\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
+%\label{fig:alkenes_hf_dft}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
+\label{fig:alkenes_hf_dft}
+\end{figure}
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 4
+\begin{center}
+\includegraphics[width=8cm]{short_pbe0_tddft_2013}
+\includegraphics[width=8cm]{short_pbe0_tddft}
+%\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
+%\label{fig:alkenes_tddft}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+
+\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
+\label{fig:alkenes_tddft}
+\end{figure}
+
+\begin{table}[h]
+\begin{tabular}{c c c c c c }
+\hline
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh \\
+\hline
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
+Mean Ionisation error (\%) & 5.3 & 6.0 & 8.1 & 10.1 & 9.0 \\
+Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 \\
+Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\ 
+\hline
+\end{tabular}
+\caption{\%-errors across calculation types for short chain alkenes  (C\(_{2}\)-C\(_{12}\))}
+\label{table:alkene_errors}
+\end{table}
 
 Also compared are TD-DFT results for this system and results of a previous work of some of the authors, which match to within 3\%.\cite{drujon_pseudopotentials_2013}
 Let us recall here that in our previous work potentials were placed at the center of bonds.
 
 \subsection{Large Systems}
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 5
+\begin{center}
+\includegraphics[width=8cm]{ring_pbe0_st}
+\includegraphics[width=8cm]{ring_pbe0_ie}
+\includegraphics[width=8cm]{ring_pbe0_homo}
+\includegraphics[width=8cm]{ring_pbe0_tddft}
+%\includegraphics[width=5cm]{19_ring_diagram}
+\fbox{\includegraphics[width=5cm]{c54h18}}
+%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
+%C\(_{54}\)H\(_{18}\) is shown in the bottom.}
+%\label{fig:rings_graphs}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+
+\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
+C\(_{54}\)H\(_{18}\) is shown in the bottom.}
+\label{fig:rings_graphs}
+\end{figure}
 
 The potentials derived above are also tested on larger systems.
 Figure \ref{fig:rings_graphs} shows the $\Delta_{ST}$, the IE and
@@ -435,8 +541,56 @@ As with the short chain alkenes, the general trend of the results is well-replic
 by the pseudo-systems, and the percentage errors, displayed in Table
 \ref{table:ring_system_errors}, are similar.
 
+\begin{table}[h]
+\begin{tabular}{c c c c c c }
+\hline
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
+\hline
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
+Mean Ionisation error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 \\
+Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
+Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\ 
+\hline
+\end{tabular}
+\caption{\%-errors across calculation types for ring-systems}
+\label{table:ring_system_errors}
+\end{table}
+
 Figure~\ref{fig:long_chain_graphs} and Table \ref{table:long_alkene_errors} refer to longer 
 alkene chains (\(n\) up to 100).
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 6
+\begin{center}
+\includegraphics[width=8cm]{long_pbe0_st}
+\includegraphics[width=8cm]{long_pbe0_ie}
+\includegraphics[width=8cm]{long_pbe0_homo}
+\includegraphics[width=8cm]{long_pbe0_tddft}
+%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
+%\label{fig:long_chain_graphs}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+
+\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
+\label{fig:long_chain_graphs}
+\end{figure}
+
+\begin{table}[h]
+\begin{tabular}{c c c c c c }
+\hline
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
+\hline
+Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 55.3 & 85.8 & 83.4 & 239.8 & 320.2 \\
+Mean Ionisation error (\%) & 25.1 & 6.7 & 9.4 & 10.3 & 11.6 \\
+Mean Singlet HOMO error (\%) & 1.8 & 7.3 & 11.3 & 16.7 & 13.6 \\
+Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\ 
+\hline
+\end{tabular}
+\caption{\%-errors across calculation types for long chain alkenes (C\(_{20}\)-C\(_{100}\))}
+\label{table:long_alkene_errors}
+\end{table}
+
 The pattern of decreasing ionisation potentials and $\Delta_{ST}$ with increasing HOMO
 energy is still followed, with the absolute error remaining consistent.
 However, differences in the triplet-singlet energies between the reference and pseudo-systems 
@@ -452,6 +606,40 @@ framework) increases in both reference and pseudo-potential cases.
 Yet, this effect is strengthened in the pseudo-potential calculations.
 These results suggest that the triplet state cannot be represented as one configuration
 but as a linear combination of mono-electronic excitations as done through TD-DFT.
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 7
+\begin{center}
+\includegraphics[width=8cm]{long_pbe0_s2}
+%\caption{Comparison of $S^2$ expectation values obtained for the calculation
+%of the first triplet configuration in a SCF formalism, for reference
+%and pseudo-systems.}
+%\label{fig:ssquare}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{Comparison of $S^2$ expectation values obtained for the calculation
+of the first triplet configuration in a SCF formalism, for reference
+and pseudo-systems.}
+\label{fig:ssquare}
+\end{figure}
+
+\begin{table}
+\begin{tabular}{c c c c}
+\hline
+\multicolumn{2}{c}{Excitation} & \multicolumn{2}{c}{Weight(\%)}\\
+\multicolumn{2}{c}{MO} & Ref. & Pseudo.\\
+\hline
+\multicolumn{2}{c}{25 a" \(\rightarrow\) 26 a"} & 77.0 &   67.1  \\
+\multicolumn{2}{c}{24 a" \(\rightarrow\) 27 a"} & 10.5 &   13.1  \\
+\multicolumn{2}{c}{23 a" \(\rightarrow\) 28 a"} & 3.6  &    5.2  \\
+\hline
+\end{tabular}
+\caption{\label{tab:coef}Comparison of the weights (all electron \emph{vs.} pseudo-potentials)
+of the excitations obtained with TD-DFT
+to represent the triplet excited state from the closed shell singlet state.
+Example case of C$_{50}$H$_{52}$.}
+\end{table}
 
 In order to show that the recovering of the agreement between the pseudo-potential
 and the reference calculations is not an artefact, we give in Table~\ref{tab:coef}
@@ -558,22 +746,6 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 
 %%%%% FIGURE ---- cc.eps
 \begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 1
-\begin{center}
-%\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
-\includegraphics[width=8cm]{ch3.png}
-\includegraphics[width=8cm]{pseudoch3.png}
-\includegraphics[width=8cm]{tm_sp2_potentials.png}
-%\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
-%\label{figure:ref_pseudo_diagram}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
-\label{figure:ref_pseudo_diagram}
-\end{figure}
-
-\begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 2
 \begin{center}
 %\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
@@ -587,92 +759,6 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 
 \caption{Diagrams of pseudo-ethene with \(d =\) 2.0 a.u. (left), and \(d = 0.5\) a.u. (right). The first pseudo-carbon is displayed in blue, with its \(s\) pseudo-potentials in cyan, and the second pseudo-carbon is in red, with its potentials in pink.}
 \label{fig:long_r_ethene}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 3
-\begin{center}
-\includegraphics[width=8cm]{short_pbe0_homo}
-\includegraphics[width=8cm]{short_pbe0_ie}
-\includegraphics[width=8cm]{short_pbe0_st}
-%\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
-%\label{fig:alkenes_hf_dft}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
-\label{fig:alkenes_hf_dft}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 4
-\begin{center}
-\includegraphics[width=8cm]{short_pbe0_tddft_2013}
-\includegraphics[width=8cm]{short_pbe0_tddft}
-%\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-%\label{fig:alkenes_tddft}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-\label{fig:alkenes_tddft}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 5
-\begin{center}
-\includegraphics[width=8cm]{ring_pbe0_st}
-\includegraphics[width=8cm]{ring_pbe0_ie}
-\includegraphics[width=8cm]{ring_pbe0_homo}
-\includegraphics[width=8cm]{ring_pbe0_tddft}
-%\includegraphics[width=5cm]{19_ring_diagram}
-\fbox{\includegraphics[width=5cm]{c54h18}}
-%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
-%C\(_{54}\)H\(_{18}\) is shown in the bottom.}
-%\label{fig:rings_graphs}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
-C\(_{54}\)H\(_{18}\) is shown in the bottom.}
-\label{fig:rings_graphs}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 6
-\begin{center}
-\includegraphics[width=8cm]{long_pbe0_st}
-\includegraphics[width=8cm]{long_pbe0_ie}
-\includegraphics[width=8cm]{long_pbe0_homo}
-\includegraphics[width=8cm]{long_pbe0_tddft}
-%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
-%\label{fig:long_chain_graphs}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
-\label{fig:long_chain_graphs}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 7
-\begin{center}
-\includegraphics[width=8cm]{long_pbe0_s2}
-%\caption{Comparison of $S^2$ expectation values obtained for the calculation
-%of the first triplet configuration in a SCF formalism, for reference
-%and pseudo-systems.}
-%\label{fig:ssquare}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-\caption{Comparison of $S^2$ expectation values obtained for the calculation
-of the first triplet configuration in a SCF formalism, for reference
-and pseudo-systems.}
-\label{fig:ssquare}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -910,97 +996,13 @@ The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimi
 
 \newpage
 
-\begin{table}[ht]
-\begin{tabular}{c c c c c}
-\hline
-\(s\) coefficient & \(s\) exponent & $\Delta_{ST}$  & Ionisation  & $\varepsilon_{HOMO}$  \\
-\hline
-\multicolumn{2}{c}{\textit{Reference Values}} & -3.533 & -9.091 & -10.363 \\
-\hline
-&& \multicolumn{3}{l}{\(p\) coefficient -3.267; \(p\) exponent 0.295} \\
-\hline
-0.552 & 0.1 & -3.533 & -27.158 & -27.31 \\
-0.608 & 1.0 & -3.533 & -28.247 & -28.395 \\
-0.936 & 5.0 & -3.533 & -29.583 & -29.722 \\
-\hline
-\multicolumn{2}{c}{\textit{Optimal Values}} &\multicolumn{3}{l}{\(p\) coefficient -3.91; \(p\) exponent 0.624} \\
-\hline
-1.5 & 0.5 & -3.533 & -9.806 & -10.062 \\
-\hline
-\end{tabular}
-\caption{\(s\)-potential fits to ethene properties as defined in the text (eV). All values are from HF calculations, and \(d = 0.5\) a.u.}
-\label{table:ethene_excitations}
-\end{table}
+\newpage
 
 \newpage
 
-\begin{table}[h]
-\begin{tabular}{c c c c c c }
-\hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh \\
-\hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
-Mean Ionisation error (\%) & 5.3 & 6.0 & 8.1 & 10.1 & 9.0 \\
-Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 \\
-Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\ 
-\hline
-\end{tabular}
-\caption{\%-errors across calculation types for short chain alkenes  (C\(_{2}\)-C\(_{12}\))}
-\label{table:alkene_errors}
-\end{table}
-
 \newpage
 
-\begin{table}[h]
-\begin{tabular}{c c c c c c }
-\hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
-\hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
-Mean Ionisation error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 \\
-Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
-Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\ 
-\hline
-\end{tabular}
-\caption{\%-errors across calculation types for ring-systems}
-\label{table:ring_system_errors}
-\end{table}
-
 \newpage
-
-\begin{table}[h]
-\begin{tabular}{c c c c c c }
-\hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
-\hline
-Mean \(\pi - \pi*\) Triplet-Singlet error (\%) & 55.3 & 85.8 & 83.4 & 239.8 & 320.2 \\
-Mean Ionisation error (\%) & 25.1 & 6.7 & 9.4 & 10.3 & 11.6 \\
-Mean Singlet HOMO error (\%) & 1.8 & 7.3 & 11.3 & 16.7 & 13.6 \\
-Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\ 
-\hline
-\end{tabular}
-\caption{\%-errors across calculation types for long chain alkenes (C\(_{20}\)-C\(_{100}\))}
-\label{table:long_alkene_errors}
-\end{table}
-
-\newpage
-
-\begin{table}
-\begin{tabular}{c c c c}
-\hline
-\multicolumn{2}{c}{Excitation} & \multicolumn{2}{c}{Weight(\%)}\\
-\multicolumn{2}{c}{MO} & Ref. & Pseudo.\\
-\hline
-\multicolumn{2}{c}{25 a" \(\rightarrow\) 26 a"} & 77.0 &   67.1  \\
-\multicolumn{2}{c}{24 a" \(\rightarrow\) 27 a"} & 10.5 &   13.1  \\
-\multicolumn{2}{c}{23 a" \(\rightarrow\) 28 a"} & 3.6  &    5.2  \\
-\hline
-\end{tabular}
-\caption{\label{tab:coef}Comparison of the weights (all electron \emph{vs.} pseudo-potentials)
-of the excitations obtained with TD-DFT
-to represent the triplet excited state from the closed shell singlet state.
-Example case of C$_{50}$H$_{52}$.}
-\end{table}
 
 \subsection{Geometry Optimisation}
 \label{section:geometry_optimisation}
