--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % Modified for use with JCC - Madhusudan Singh Copyright (C) (2012). All rights reserved.
-\documentclass[12pt]{revtex4}
+\documentclass[12pt]{revtex4-1}
 
 \setlength{\oddsidemargin}{0in}  %left margin position, reference is one inch
 \setlength{\textwidth}{6.5in}    %width of text=8.5-1in-1in for margin
@@ -306,7 +306,7 @@ to build a physically meaningful model.
 %\label{figure:ref_pseudo_diagram}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 \caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
 \label{figure:ref_pseudo_diagram}
 \end{figure}
@@ -473,7 +473,7 @@ Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for e
 %\label{fig:alkenes_hf_dft}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 \caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
 \label{fig:alkenes_hf_dft}
 \end{figure}
@@ -487,7 +487,7 @@ Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for e
 %\label{fig:alkenes_tddft}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 
 \caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
 \label{fig:alkenes_tddft}
@@ -527,7 +527,7 @@ Let us recall here that in our previous work potentials were placed at the cente
 %\label{fig:rings_graphs}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 
 \caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
 C\(_{54}\)H\(_{18}\) is shown in the bottom.}
@@ -570,7 +570,7 @@ alkene chains (\(n\) up to 100).
 %\label{fig:long_chain_graphs}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 
 \caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
 \label{fig:long_chain_graphs}
@@ -617,7 +617,7 @@ but as a linear combination of mono-electronic excitations as done through TD-DF
 %\label{fig:ssquare}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 \caption{Comparison of $S^2$ expectation values obtained for the calculation
 of the first triplet configuration in a SCF formalism, for reference
 and pseudo-systems.}
@@ -695,26 +695,6 @@ The reproduction of the gradient is more of a challenge as many electrons were r
 Finally, QM/MM tests can be started quickly, as we could fix the local geometry of the potentials
 in the QM part. The MM part would be taken care of without modification of the standard parameters.
 
-\clearpage
-\subsection{CH\(_{3}\), with \(s\)-potentials}
-
-We aim first at reproducing the values for the CH\(^{\bullet}_{3}\) radical as given in Table \ref{table:ch3_s_potentials}. 
-This reference CH\(^{\bullet}_{3}\) is created and has its geometry optimised under Hartree-Fock (HF). The reference geometry gives a C - H distance of 2.0466 a.u., and so we pick \(d = 2.0\) a.u. as a starting guess for the planar distance from the pseudo-carbon, \(d\), of our pseudo-potentials. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results. Promisingly, we are able to produce many sets of potentials that give the correct energy.
-
-\subsection{Ethene, with \(s\) and \(p\)-potentials}
-
-Next, we take some of these potentials to create a pseudo-ethene system, with the results shown in Table \ref{table:ethene_s_pseudo}. All potentials tested with \(d = 2.0\) a.u. gave results several orders of magnitude away from the reference value. From Figure \ref{fig:long_r_ethene} we may see the reason. One of the potential sets from each carbon is closer to the neighbouring carbon than the neighbour's own potential sets, thus both pseudo-carbons are affected by potentials which do not belong to them. At the shorter range \(d = 0.5\) a.u., the HOMO energy is of the right magnitude, though with errors of \(~ 30\%\). Attempts to eliminate this error lead us to the additional use of the \(p_{z}\) potential \textit{alongside} the \(s\) potentials.
-
-The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \ref{table:p_potentials} displaying the results. As before, \(d = 0.5\) a.u.. The \(p_{z}\) potential is selected using the procedure described in Section \ref{section:potential_derivation}, with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\)-potentials are then optimised once more to give the correct HOMO energy for CH\(^{\bullet}_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(^{\bullet}_{3}\) system to the ethene, suggesting therefore that whilst the \(s\)-potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they 
-cannot alone describe the relationship between them.
-
-Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system:
-the singlet-triplet excitation energy ($\Delta_{ST}$) in the SCF framework (energy difference between the triplet and the singlet mono-reference
-calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ethene_excitations}. Testing the relevant energies for the optimised pseudo-systems above, we can see from Table \ref{table:ethene_excitations} that the early results are not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Table \ref{table:ethene_excitations} shows our optimal result, chosen to give HOMO, triplet - singlet and ionisation energies closest to the reference values. 
-
-\clearpage
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BIBLIOGRAPHY
 
@@ -741,6 +721,23 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \clearpage
+\section{Supplementary materials}
+\subsection{CH\(_{3}\), with \(s\)-potentials}
+
+We aim first at reproducing the values for the CH\(^{\bullet}_{3}\) radical as given in Table \ref{table:ch3_s_potentials}. 
+This reference CH\(^{\bullet}_{3}\) is created and has its geometry optimised under Hartree-Fock (HF). The reference geometry gives a C - H distance of 2.0466 a.u., and so we pick \(d = 2.0\) a.u. as a starting guess for the planar distance from the pseudo-carbon, \(d\), of our pseudo-potentials. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results. Promisingly, we are able to produce many sets of potentials that give the correct energy.
+
+\subsection{Ethene, with \(s\) and \(p\)-potentials}
+
+Next, we take some of these potentials to create a pseudo-ethene system, with the results shown in Table \ref{table:ethene_s_pseudo}. All potentials tested with \(d = 2.0\) a.u. gave results several orders of magnitude away from the reference value. From Figure \ref{fig:long_r_ethene} we may see the reason. One of the potential sets from each carbon is closer to the neighbouring carbon than the neighbour's own potential sets, thus both pseudo-carbons are affected by potentials which do not belong to them. At the shorter range \(d = 0.5\) a.u., the HOMO energy is of the right magnitude, though with errors of \(~ 30\%\). Attempts to eliminate this error lead us to the additional use of the \(p_{z}\) potential \textit{alongside} the \(s\) potentials.
+
+The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \ref{table:p_potentials} displaying the results. As before, \(d = 0.5\) a.u.. The \(p_{z}\) potential is selected using the procedure described in Section \ref{section:potential_derivation}, with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\)-potentials are then optimised once more to give the correct HOMO energy for CH\(^{\bullet}_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(^{\bullet}_{3}\) system to the ethene, suggesting therefore that whilst the \(s\)-potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they 
+cannot alone describe the relationship between them.
+
+Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system:
+the singlet-triplet excitation energy ($\Delta_{ST}$) in the SCF framework (energy difference between the triplet and the singlet mono-reference
+calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ethene_excitations}. Testing the relevant energies for the optimised pseudo-systems above, we can see from Table \ref{table:ethene_excitations} that the early results are not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Table \ref{table:ethene_excitations} shows our optimal result, chosen to give HOMO, triplet - singlet and ionisation energies closest to the reference values. 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % FIGURE CAPTIONS
 
@@ -755,168 +752,12 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 %\label{fig:long_r_ethene}
 \end{center}
 \vspace{0.25in}
-\hspace*{3in}
+%\hspace*{3in}
 
 \caption{Diagrams of pseudo-ethene with \(d =\) 2.0 a.u. (left), and \(d = 0.5\) a.u. (right). The first pseudo-carbon is displayed in blue, with its \(s\) pseudo-potentials in cyan, and the second pseudo-carbon is in red, with its potentials in pink.}
 \label{fig:long_r_ethene}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% FIGURES %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% FIGURES % FIGURE FILES
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 1
-% FIGURES \begin{center}
-% FIGURES %\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
-% FIGURES \includegraphics[width=8cm]{ch3.png}
-% FIGURES \includegraphics[width=8cm]{pseudoch3.png}
-% FIGURES \includegraphics[width=8cm]{tm_sp2_potentials.png}
-% FIGURES %\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
-% FIGURES %\label{figure:ref_pseudo_diagram}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 1 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 2
-% FIGURES \begin{center}
-% FIGURES %\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
-% FIGURES \fbox{\includegraphics[width=0.45\textwidth]{hires_long_r_crop.png}}%
-% FIGURES \fbox{\includegraphics[width=0.45\textwidth]{hires_short_r_crop.png}}
-% FIGURES %\caption{Diagrams of pseudo-ethene with \(d =\) 2.0 a.u. (left), and \(d = 0.5\) a.u. (right). The first pseudo-carbon is displayed in blue, with its \(s\) pseudo-potentials in cyan, and the second pseudo-carbon is in red, with its potentials in pink.}
-% FIGURES %\label{fig:long_r_ethene}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 2 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 3
-% FIGURES \begin{center}
-% FIGURES \includegraphics[width=8cm]{short_pbe0_homo}
-% FIGURES \includegraphics[width=8cm]{short_pbe0_ie}
-% FIGURES \includegraphics[width=8cm]{short_pbe0_st}
-% FIGURES %\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
-% FIGURES %\label{fig:alkenes_hf_dft}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 3 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 4
-% FIGURES \begin{center}
-% FIGURES \includegraphics[width=8cm]{short_pbe0_tddft_2013}
-% FIGURES \includegraphics[width=8cm]{short_pbe0_tddft}
-% FIGURES %\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-% FIGURES %\label{fig:alkenes_tddft}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 4 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 5
-% FIGURES \begin{center}
-% FIGURES \includegraphics[width=8cm]{ring_pbe0_st}
-% FIGURES \includegraphics[width=8cm]{ring_pbe0_ie}
-% FIGURES \includegraphics[width=8cm]{ring_pbe0_homo}
-% FIGURES \includegraphics[width=8cm]{ring_pbe0_tddft}
-% FIGURES %\includegraphics[width=5cm]{19_ring_diagram}
-% FIGURES \fbox{\includegraphics[width=5cm]{c54h18}}
-% FIGURES %\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
-% FIGURES %C\(_{54}\)H\(_{18}\) is shown in the bottom.}
-% FIGURES %\label{fig:rings_graphs}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 5 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 6
-% FIGURES \begin{center}
-% FIGURES \includegraphics[width=8cm]{long_pbe0_st}
-% FIGURES \includegraphics[width=8cm]{long_pbe0_ie}
-% FIGURES \includegraphics[width=8cm]{long_pbe0_homo}
-% FIGURES \includegraphics[width=8cm]{long_pbe0_tddft}
-% FIGURES %\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
-% FIGURES %\label{fig:long_chain_graphs}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 6 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
-% FIGURES \clearpage
-% FIGURES 
-% FIGURES %\vspace*{0.1in}   %%% FIGURE 7
-% FIGURES \begin{center}
-% FIGURES \includegraphics[width=8cm]{long_pbe0_s2}
-% FIGURES %\caption{Comparison of $S^2$ expectation values obtained for the calculation
-% FIGURES %of the first triplet configuration in a SCF formalism, for reference
-% FIGURES %and pseudo-systems.}
-% FIGURES %\label{fig:ssquare}
-% FIGURES \end{center}
-% FIGURES \vspace{0.25in}
-% FIGURES \hspace*{3in}
-% FIGURES {\Large
-% FIGURES \begin{minipage}[t]{3in}
-% FIGURES \baselineskip = .5\baselineskip
-% FIGURES Figure 7 \\
-% FIGURES Alexander Punter, Paola Nava, Yannick Carissan \\
-% FIGURES J.\ Comput.\ Chem.
-% FIGURES \end{minipage}
-% FIGURES }
-% FIGURES 
 \clearpage
 
 %\begin{table}
@@ -994,35 +835,25 @@ The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimi
 \label{table:p_potentials}
 \end{table}
 
-\newpage
-
-\newpage
-
-\newpage
-
-\newpage
-
-\newpage
-
-\subsection{Geometry Optimisation}
-\label{section:geometry_optimisation}
-
-Using pseudo-potential calculations for geometry optimisation presents some difficulties. Designing pseudo-potentials such that the explicitly-treated parts of the molecule experience the correct attraction and repulsion at a particular geometry is one thing, designing them such that the same is true at any (reasonable) geometry is quite another. With a little knowledge of the all-electron system however, we can ensure that the pseudo-system will fall into the correct geometry.
-
-We begin by finding curves of dissociation for the explicit and pseudo-potential parts of the molecule, as well as another for the same parts of the all-electron molecule (see Fig \ref{fig:dissociation_diagram}). We then use a nonlinear least-squares Marquardt-Levenburg algorithm to fit a simple, exponentially-decreasing function to the difference between thsese two curves. We can now use this to make an energy correction to the pseudo-system. 
- 
-We want the total energy of the system to be a minimum and the energy gradients on the explicitly-treated atoms to be zero at the true geometry (this needn't be true of the pseudo-atoms, see below). We have the correction for the total energy, and by taking the derivative of the fitted function, we have a measure of whether the explicit and pseudo-potential parts of the molecule experience an overall attraction or repulsion, as well as an estimate of its magnitude. We assume the effect of the potentials on the explicit hydrogen atoms is small, and add our gradient correction directly to the potential felt along the carbon-pseudo-carbon axis by one carbon, whilst subtracting it from the potential felt by the other. By doing this at every step of the optimisation, the carbon-pseudo-carbon distance should naturally reach the correct value.
-
-Finally, the pseudo-atoms are fixed relative to each other before starting the optimisation.
-
-\begin{figure}
-\begin{center}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-\caption{Diagram of dissociation curves for all-electron and pseudo-molecular calculations.}
-\label{figure:dissociation_diagram}
-\end{figure}
+%\subsection{Geometry Optimisation}
+%\label{section:geometry_optimisation}
+%
+%Using pseudo-potential calculations for geometry optimisation presents some difficulties. Designing pseudo-potentials such that the explicitly-treated parts of the molecule experience the correct attraction and repulsion at a particular geometry is one thing, designing them such that the same is true at any (reasonable) geometry is quite another. With a little knowledge of the all-electron system however, we can ensure that the pseudo-system will fall into the correct geometry.
+%
+%We begin by finding curves of dissociation for the explicit and pseudo-potential parts of the molecule, as well as another for the same parts of the all-electron molecule (see Fig \ref{fig:dissociation_diagram}). We then use a nonlinear least-squares Marquardt-Levenburg algorithm to fit a simple, exponentially-decreasing function to the difference between thsese two curves. We can now use this to make an energy correction to the pseudo-system. 
+% 
+%We want the total energy of the system to be a minimum and the energy gradients on the explicitly-treated atoms to be zero at the true geometry (this needn't be true of the pseudo-atoms, see below). We have the correction for the total energy, and by taking the derivative of the fitted function, we have a measure of whether the explicit and pseudo-potential parts of the molecule experience an overall attraction or repulsion, as well as an estimate of its magnitude. We assume the effect of the potentials on the explicit hydrogen atoms is small, and add our gradient correction directly to the potential felt along the carbon-pseudo-carbon axis by one carbon, whilst subtracting it from the potential felt by the other. By doing this at every step of the optimisation, the carbon-pseudo-carbon distance should naturally reach the correct value.
+%
+%Finally, the pseudo-atoms are fixed relative to each other before starting the optimisation.
+%
+%\begin{figure}
+%\begin{center}
+%\end{center}
+%\vspace{0.25in}
+%\hspace*{3in}
+%\caption{Diagram of dissociation curves for all-electron and pseudo-molecular calculations.}
+%\label{figure:dissociation_diagram}
+%\end{figure}
 
 \end{document}
 
